test/invalid/baseline/spaced-negative-infinity.txt
Syntax error at line 2 in spaced-negative-infinity.webidl, since `interface X`:
    const float infinity = - Infinity;
                           ^ Const lacks a value
